--- a/Sistema.ipynb
+++ b/Sistema.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,22 +18,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'Particula' object is not subscriptable",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overshoot: 1.8420806633627098\n",
+      "alpha: 100.0\n",
+      "Overshoot: 1.8404916133694824\n",
+      "alpha: 100.0\n",
+      "Overshoot: 1.9226372126829518\n",
+      "alpha: 100.0\n",
+      "Overshoot: 1.8277975119228453\n",
+      "alpha: 100.0\n",
+      "Overshoot: 1.9189875276015087\n",
+      "alpha: 100.0\n",
+      "Overshoot: 1.0652518283290802\n",
+      "alpha: 100.0\n",
+      "Overshoot: 1.9383396867833895\n",
+      "alpha: 100.0\n",
+      "Overshoot: 1.9204130429953021\n",
+      "alpha: 100.0\n",
+      "Overshoot: 1.8901868123208971\n",
+      "alpha: 100.0\n",
+      "Overshoot: 1.912703620259085\n",
+      "alpha: 100.0\n",
+      "[<PSO.Particula object at 0x7fdb7201ded0>, <PSO.Particula object at 0x7fdb7201de70>, <PSO.Particula object at 0x7fdb7201dea0>, <PSO.Particula object at 0x7fdb7201df30>, <PSO.Particula object at 0x7fdb7201c100>, <PSO.Particula object at 0x7fdb7201c130>, <PSO.Particula object at 0x7fdb7201c160>, <PSO.Particula object at 0x7fdb7201c190>, <PSO.Particula object at 0x7fdb7201c1c0>, <PSO.Particula object at 0x7fdb7201c1f0>]\n",
+      "[None, None, None, None, None, None, None, None, None, None]\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'X'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [4], line 23\u001b[0m\n\u001b[1;32m     20\u001b[0m pid_param\u001b[39m.\u001b[39mappend(set_point)\n\u001b[1;32m     22\u001b[0m particulas \u001b[39m=\u001b[39m PSO\u001b[39m.\u001b[39minicializate(n_part, dim, \u001b[39mmin\u001b[39m, \u001b[39mmax\u001b[39m)  \n\u001b[0;32m---> 23\u001b[0m PSO\u001b[39m.\u001b[39;49mupdate_sistem(particulas,\u001b[39mmin\u001b[39;49m,\u001b[39mmax\u001b[39;49m,w,c1,c2,parada,dim,pid_param)\n",
-      "File \u001b[0;32m~/Documents/GitHub/IC-IT/PSO.py:141\u001b[0m, in \u001b[0;36mupdate_sistem\u001b[0;34m(particulas, min, max, w, c1, c2, parada, dim, pid_param)\u001b[0m\n\u001b[1;32m    137\u001b[0m sem_melhoras \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[1;32m    139\u001b[0m n_iter \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m--> 141\u001b[0m particulas \u001b[39m=\u001b[39m [Medidas\u001b[39m.\u001b[39mISE(particula, pid_param) \u001b[39mfor\u001b[39;00m particula \u001b[39min\u001b[39;00m particulas]\n\u001b[1;32m    143\u001b[0m g_best \u001b[39m=\u001b[39m updating_gbest(particulas)\u001b[39m.\u001b[39mcopy()\n\u001b[1;32m    145\u001b[0m \u001b[39mwhile\u001b[39;00m(\u001b[39mTrue\u001b[39;00m):\n",
-      "File \u001b[0;32m~/Documents/GitHub/IC-IT/PSO.py:141\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m    137\u001b[0m sem_melhoras \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[1;32m    139\u001b[0m n_iter \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m--> 141\u001b[0m particulas \u001b[39m=\u001b[39m [Medidas\u001b[39m.\u001b[39;49mISE(particula, pid_param) \u001b[39mfor\u001b[39;00m particula \u001b[39min\u001b[39;00m particulas]\n\u001b[1;32m    143\u001b[0m g_best \u001b[39m=\u001b[39m updating_gbest(particulas)\u001b[39m.\u001b[39mcopy()\n\u001b[1;32m    145\u001b[0m \u001b[39mwhile\u001b[39;00m(\u001b[39mTrue\u001b[39;00m):\n",
-      "File \u001b[0;32m~/Documents/GitHub/IC-IT/Medidas.py:34\u001b[0m, in \u001b[0;36mISE\u001b[0;34m(particula, pid_param, alpha)\u001b[0m\n\u001b[1;32m     32\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m     33\u001b[0m   _, particula\u001b[39m.\u001b[39merro, _ \u001b[39m=\u001b[39m pid\u001b[39m.\u001b[39mcontroller(particula\u001b[39m.\u001b[39mX[\u001b[39m0\u001b[39m],particula\u001b[39m.\u001b[39mX[\u001b[39m1\u001b[39m],particula\u001b[39m.\u001b[39mX[\u001b[39m2\u001b[39m])\n\u001b[0;32m---> 34\u001b[0m   particula\u001b[39m.\u001b[39merro \u001b[39m=\u001b[39m \u001b[39msum\u001b[39m(particula\u001b[39m.\u001b[39merro \u001b[39m*\u001b[39m\u001b[39m*\u001b[39m \u001b[39m2\u001b[39m) \u001b[39m+\u001b[39m (alpha \u001b[39m*\u001b[39m Overshoot(particula, pid_param))\n\u001b[1;32m     35\u001b[0m   \u001b[39m# print(f'particula.erro : {particula.erro:,.2f} posição: {particula.X} pbest {particula.pbest}' )\u001b[39;00m\n\u001b[1;32m     36\u001b[0m   \u001b[39mreturn\u001b[39;00m particula\n",
-      "File \u001b[0;32m~/Documents/GitHub/IC-IT/Medidas.py:126\u001b[0m, in \u001b[0;36mOvershoot\u001b[0;34m(particula, pid_param)\u001b[0m\n\u001b[1;32m    123\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mOvershoot\u001b[39m(particula,pid_param):  \n\u001b[1;32m    124\u001b[0m   pid \u001b[39m=\u001b[39m Pid(pid_param[\u001b[39m0\u001b[39m],pid_param[\u001b[39m1\u001b[39m],set_point \u001b[39m=\u001b[39m pid_param[\u001b[39m2\u001b[39m])\n\u001b[0;32m--> 126\u001b[0m   Y, _, T \u001b[39m=\u001b[39m pid\u001b[39m.\u001b[39mcontroller(particula[\u001b[39m0\u001b[39;49m],particula[\u001b[39m1\u001b[39m],particula[\u001b[39m2\u001b[39m])\n\u001b[1;32m    128\u001b[0m   overshoot \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mmax(Y)\n\u001b[1;32m    130\u001b[0m   \u001b[39mreturn\u001b[39;00m overshoot\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'Particula' object is not subscriptable"
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [2], line 27\u001b[0m\n\u001b[1;32m     24\u001b[0m particulas \u001b[39m=\u001b[39m PSO\u001b[39m.\u001b[39minicializate(n_part, dim, \u001b[39mmin\u001b[39m, \u001b[39mmax\u001b[39m)  \n\u001b[1;32m     25\u001b[0m sistema\u001b[39m.\u001b[39mappend(particulas)\n\u001b[0;32m---> 27\u001b[0m PSO\u001b[39m.\u001b[39;49mupdate_sistem(sistema,particulas,\u001b[39mmin\u001b[39;49m,\u001b[39mmax\u001b[39;49m,w,c1,c2,parada,dim,pid_param)\n",
+      "File \u001b[0;32m~/Documents/GitHub/IC-IT/PSO.py:169\u001b[0m, in \u001b[0;36mupdate_sistem\u001b[0;34m(sistema, particulas, min, max, w, c1, c2, parada, dim, pid_param)\u001b[0m\n\u001b[1;32m    166\u001b[0m   \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m< \u001b[39m\u001b[39m{\u001b[39;00mn_iter\u001b[39m}\u001b[39;00m\u001b[39m iterações antes de atingir o critério. >\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m    167\u001b[0m   \u001b[39mbreak\u001b[39;00m\n\u001b[0;32m--> 169\u001b[0m particulas \u001b[39m=\u001b[39m [updating_particle(particula, \u001b[39mmin\u001b[39m, \u001b[39mmax\u001b[39m,dim) \u001b[39mfor\u001b[39;00m particula \u001b[39min\u001b[39;00m particulas]\n\u001b[1;32m    170\u001b[0m particulas \u001b[39m=\u001b[39m [updating_velocity(particula,w,c1,c2,g_best,dim) \u001b[39mfor\u001b[39;00m particula \u001b[39min\u001b[39;00m particulas]\n\u001b[1;32m    171\u001b[0m particulas \u001b[39m=\u001b[39m [Medidas\u001b[39m.\u001b[39mISE(particula, pid_param) \u001b[39mfor\u001b[39;00m particula \u001b[39min\u001b[39;00m particulas]\n",
+      "File \u001b[0;32m~/Documents/GitHub/IC-IT/PSO.py:169\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m    166\u001b[0m   \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m< \u001b[39m\u001b[39m{\u001b[39;00mn_iter\u001b[39m}\u001b[39;00m\u001b[39m iterações antes de atingir o critério. >\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m    167\u001b[0m   \u001b[39mbreak\u001b[39;00m\n\u001b[0;32m--> 169\u001b[0m particulas \u001b[39m=\u001b[39m [updating_particle(particula, \u001b[39mmin\u001b[39;49m, \u001b[39mmax\u001b[39;49m,dim) \u001b[39mfor\u001b[39;00m particula \u001b[39min\u001b[39;00m particulas]\n\u001b[1;32m    170\u001b[0m particulas \u001b[39m=\u001b[39m [updating_velocity(particula,w,c1,c2,g_best,dim) \u001b[39mfor\u001b[39;00m particula \u001b[39min\u001b[39;00m particulas]\n\u001b[1;32m    171\u001b[0m particulas \u001b[39m=\u001b[39m [Medidas\u001b[39m.\u001b[39mISE(particula, pid_param) \u001b[39mfor\u001b[39;00m particula \u001b[39min\u001b[39;00m particulas]\n",
+      "File \u001b[0;32m~/Documents/GitHub/IC-IT/PSO.py:64\u001b[0m, in \u001b[0;36mupdating_particle\u001b[0;34m(particula, min, max, dim)\u001b[0m\n\u001b[1;32m     60\u001b[0m \u001b[39m'''\u001b[39;00m\n\u001b[1;32m     61\u001b[0m \u001b[39mFunção que atualiza a posição da particula\u001b[39;00m\n\u001b[1;32m     62\u001b[0m \u001b[39m'''\u001b[39;00m\n\u001b[1;32m     63\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(dim):\n\u001b[0;32m---> 64\u001b[0m   particula\u001b[39m.\u001b[39mX[i] \u001b[39m=\u001b[39m particula\u001b[39m.\u001b[39;49mX[i] \u001b[39m+\u001b[39m particula\u001b[39m.\u001b[39mV[i]\n\u001b[1;32m     66\u001b[0m   \u001b[39mif\u001b[39;00m particula\u001b[39m.\u001b[39mX[i] \u001b[39m>\u001b[39m \u001b[39mmax\u001b[39m[i]:\n\u001b[1;32m     67\u001b[0m     particula\u001b[39m.\u001b[39mX[i] \u001b[39m=\u001b[39m \u001b[39mmax\u001b[39m[i]\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'X'"
      ]
     }
    ],
@@ -53,14 +80,18 @@
     "dim = 3 # dimensão da entrada \n",
     "\n",
     "min = [0.001, 0.0000001, 0.0000001] # minimo do sistema\n",
-    "max = [2000000.0, 20.0, 20.0] # maximo do sistema\n",
+    "max = [100.0, 20.0, 20.0] # maximo do sistema\n",
     "\n",
     "pid_param.append(num)\n",
     "pid_param.append(den)\n",
     "pid_param.append(set_point)\n",
     "\n",
+    "sistema = list()\n",
+    "\n",
     "particulas = PSO.inicializate(n_part, dim, min, max)  \n",
-    "PSO.update_sistem(particulas,min,max,w,c1,c2,parada,dim,pid_param)"
+    "sistema.append(particulas)\n",
+    "\n",
+    "PSO.update_sistem(sistema,particulas,min,max,w,c1,c2,parada,dim,pid_param)"
    ]
   }
  ],
